# serde-rusoto

./: Cargo.toml
src/: main.rs
