[package]
name = "serde-rusoto"
version = "0.1.0"
authors = ["Peter C. Norton <spacey-github.com@ssr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde for json serialization and deserialization
chrono = {version = "0.4", features = ["serde"]}
serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
# Rusoto AWS API
rusoto_core = {version="0.45.0"}
rusoto_ec2 = {version="0.45.0", features = ["serialize_structs"]}

tokio = { version = "0.2", features = ["full"] }